Name:                   llrbtree
Version:                0.0.2
Author:                 Kazu Yamamoto <kazu@iij.ad.jp>
Maintainer:             Kazu Yamamoto <kazu@iij.ad.jp>
License:                BSD3
License-File:           LICENSE
Synopsis:               Set implementations with trees
Description:            Set implemantations with red-black trees,
                        left-leaning red-black Trees,
                        and weight balanced trees (trees of bounded balance).
Category:               Data
Cabal-Version:          >= 1.6
Build-Type:             Simple
library
  if impl(ghc >= 6.12)
    GHC-Options:        -Wall -fno-warn-unused-do-bind
  else
    GHC-Options:        -Wall
  Exposed-Modules:      Data.RBTree
                        Data.RBTree.LL
                        Data.WBTree
  Build-Depends:        base >= 4 && < 5

Source-Repository head
  Type:                 git
  Location:             https://github.com/kazu-yamamoto/llrbtree
